--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>dungeon</title>
-        <link href="/style.css" rel="stylesheet">
+        <link href="/static/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -31,6 +31,6 @@
             </form>
         </div>
 
-        <script src="main.js"></script>
+        <script src="/static/main.js"></script>
     </body>
 </html>
