--- a/public/index.html
+++ b/public/index.html
@@ -8,29 +8,35 @@
     </head>
 
     <body>
+        <h1>dungeon online</h1>
         <div id="wrapper">
-            <form id="register" class="input-box" action="/register" method="post">
-                <input type="text" name="username" placeholder="Username"> <br>
-                <input type="password" name="password" placeholder="Password"> <br>
-                <input type="submit" value="Register">
-            </form>
+            <div class="box">
+                <a href="#about">about</a> | <a href="#login">login</a> | <a href="#register">register</a>
+            </div>
 
-            <hr>
+            <div id="about" class="box">
+                Are you ready? For dungeon online? I bet you ain't.
+            </div>
 
-            <form id="login" class="input-box" action="/login" method="post">
-                <input type="text" name="username" placeholder="Username"> <br>
-                <input type="password" name="password" placeholder="Password"> <br>
-                <input type="submit" value="Login">
-            </form>
+            <div id="login" class="box">
+                <h2>login</h2>
+                <form action="/login" method="post">
+                    <input type="text" name="username" placeholder="Username">
+                    <input type="password" name="password" placeholder="Password"> <br>
+                    <input type="submit" value="Login">
+                </form>
+                <p>Don't have an account? <a href="#register">register</a>!</p>
+            </div>
 
-            <hr>
-
-            <form id="chat" class="input-box">
-                <input type="text" id="chat-message" placeholder="Chat Message"> <br>
-                <input type="submit" value="Send">
-            </form>
+            <div id="register" class="box">
+                <h2>register</h2>
+                <form action="/register" method="post">
+                    <input type="text" name="username" placeholder="Username"> <br>
+                    <input type="password" name="password" placeholder="Password"> <br>
+                    <input type="submit" value="Register">
+                </form>
+                <p>Already have an account? <a href="#login">login</a>!</p>
+            </div>
         </div>
-
-        <script src="/static/main.js"></script>
     </body>
 </html>
