awful frontend landing code

--- a/public/game.html
+++ b/public/game.html
@@ -11,6 +11,6 @@
         <canvas id="canvas"></canvas>
         <div id="ui">
 
-        <script src="/static/client.js"></script>
+        <script src="/static/game.js"></script>
     </body>
 </html>
