--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>dungeon</title>
+        <title>Vault of Splendor</title>
         <link href="/static/style.css" rel="stylesheet">
     </head>
 
